--- a/ezBayWeb/src/axlomoso/ezbay/struts/ressources/Application_fr.properties
+++ b/ezBayWeb/src/axlomoso/ezbay/struts/ressources/Application_fr.properties
@@ -5,9 +5,13 @@
 titre.application=EzBay 
 
 # Link Resources
+link.retour=Retour
 link.inscription=S'inscrire
 link.connexion=Se connecter
 link.deconnexion=Se déconnecter
+link.vendeur.edit=Editer
+link.membre.edit=Editer
+link.modifier=Modifier
 
 # Label Boutons
 bouton.label.valider=Valider
@@ -20,7 +24,19 @@ errors.header=<font color="red"><b>Erreur(s)</b></font><ul>
 errors.footer=</ul><hr width="100%" size="1" noshade="true" />
 
 # -- myEzBay.jsp --
+myEzBay.menu.sectionClient.titre=CLIENT
+myEzBay.menu.sectionClient.link.infos=Informations Personnelles
+myEzBay.menu.sectionClient.link.achats=Mes achats
+myEzBay.menu.sectionClient.link.encheres=Mes enchères
+myEzBay.menu.sectionVendeur.titre=VENDEUR
+myEzBay.menu.sectionVendeur.link.infos=Informations Vendeur
+myEzBay.menu.sectionVendeur.link.inscription=S'inscrire comme vendeur
+myEzBay.menu.sectionClient.link.articles=Mes articles
+myEzBay.menu.sectionClient.link.miseEnVente=Mise en vente d'articles
 myEzBay.erreur.connexion=Mauvaise authentification
+
+
+
 
 # -- inscription.jsp --
 inscription.label=Ajout d'un membre
@@ -47,16 +63,41 @@ inscription.erreur.password2.obligatoire=<li>Le champ Vérification Mot de passe 
 inscription.erreur.email.obligatoire=<li>Le champ E-mail est obligatoire</li>
 inscription.erreur.adresse.obligatoire=<li>Le champ Adresse est obligatoire</li>
 inscription.erreur.codePostal.obligatoire=<li>Le champ Code Postal est obligatoire</li>
+inscription.erreur.codePostal.badFormat=<li>Le champ Code Postal doit comporter maximum 5 chiffres</li>
 inscription.erreur.ville.obligatoire=<li>Le champ Ville est obligatoire</li>
 inscription.erreur.pays.obligatoire=<li>Le champ Pays est obligatoire</li>
-inscription.erreur.telephoneFixe.obligatoire=<li>Le champ Téléphone (fixe) est obligatoire</li>
-inscription.erreur.telephonePortable.obligatoire=<li>Le champ Téléphone (Portable) est obligatoire</li>
 inscription.erreur.dateNaissance.obligatoire=<li>Le champ Date de naissance est obligatoire</li>
 inscription.erreur.dateNaissance.badFormat=<li>la date doit être de la forme jj/mm/aaaa</li>
 inscription.erreur.password.confirmation=<li>Erreur de mot de passe</li>
-inscription.erreur.existMembre=Ce membre est déjà existant !
+inscription.erreur.pseudoDejaUtilise=<li>Le pseudo est déjà utilisé</li>
+inscription.erreur.telephone.obligatoire=<li>Au moins l'un des 2 champs téléphone doit être rempli.</li>
+inscription.erreur.telephone.badFormat=<li>Les champs Téléphone ne doivent comporter que des chiffres</li>
 
+# --/jsp/vendeur.jsp
+vendeur.titre=Inscription en tant que vendeur
+vendeur.titre.infos=Informations Vendeur
+vendeur.titre.infosCB=Information carte bleue
+vendeur.label.numCB=Numéro
+vendeur.label.nomProprioCB=Nom du propriétaire
+vendeur.label.dateExpirCB=Date d'expiration
+vendeur.label.codeSecuCB=Code sécurité
+vendeur.inscription.erreur.dateExpirCB.badFormat=<li>La date d'expiration de la CB doit être de la forme jj/mm/aaaa</li>
+vendeur.inscription.erreur.dateExpirCB.obligatoire=<li>Le champ Date d'expiration de la CB est obligatoire</li>
+vendeur.inscription.erreur.codeSecuCB.obligatoire=<li>Le champ Code de Sécurité CB est obligatoire</li>
+vendeur.inscription.erreur.nomProprioCB.obligatoire=<li>Le champ Nom du propriétaire de la CB est obligatoire</li>
+vendeur.inscription.erreur.numCB.obligatoire=<li>Le champ Numéro de la CB est obligatoire</li>
+vendeur.inscription.erreur.numCB.badFormat=<li>Le champ Numéro de la CB doit comporter 16 chiffres</li>
+vendeur.inscription.erreur.codeSecuCB.badFormat=<li>Le champ Code de Sécurité CB doit comporter 3 chiffres</li>
 
+# --/jsp/vendeurArticles.jsp
+vendeurArticles.titre=Vendeur : mes articles
+vendeurArticles.articlesEnAttente.titre=Articles en attente
+vendeurArticles.articlesEnVente.titre=Articles en vente
+vendeurArticles.articlesVendus.titre=Articles vendus
+articleEnAttente.noArticle=Aucun article trouvé.
+
+# --/jsp/membreInformations.jsp
+membre.titre.infos=Informations Membre
 
 # -- /default.do --
 default.welcome=Bienvenue !
@@ -82,15 +123,27 @@ articleList.dateLimite=Date Limite
 articleList.noArticle=Aucun article trouvé.
 
 # -- articleEdit.jsp --
-articleEdit.title=Liste des articles 2
+articleEdit.title=Mise en vente d'un article
 articleEdit.libelle=Libellé
 articleEdit.marque=Marque
 articleEdit.modele=Modèle
 articleEdit.prixVente=Prix de Vente
 articleEdit.anneeFabrication=Année de Fabrication
 articleEdit.dateLimite=Date Limite
-articleEdit.title=Edition d'un article
 articleEdit.errors.articleNotSaved=L'article n'a pas été enregistré
+
+articleEdit.erreurs.libelleVide=<li>Le libellé est obligatoire.</li>
+articleEdit.erreurs.marqueVide=<li>La marque est obligatoire.</li>
+articleEdit.erreurs.dateLimiteVide=<li>La date limite est obligatoire.</li>
+articleEdit.erreurs.dateLimiteNonValide=<li>La date limite n'est pas valide.</li>
+articleEdit.erreurs.modeleVide=<li>Le modèle est obligatoire.</li>
+articleEdit.erreurs.prixVenteVide=<li>Le prix de vente est obligatoire.</li>
+articleEdit.erreurs.anneeFabricationVide=<li>L'année de fabrication est obligatoire.</li>
+articleEdit.erreurs.anneeFabricationNonValide=<li>L'année de fabrication n'est pas valide.</li>
+articleEdit.erreurs.prixVenteNonValide=<li>Le prix de vente n'est pas valide.</li>
+articleEdit.erreurs.anneeFabricationNonValide=<li>L'anne de fabrication n'est pas valide.</li>
+
+
 
 # -- articleAdd.jsp --
 articleAdd.title=Liste des articles 2
