AXEL : ajout de inscription.erreur.email.invalide

--- a/ezBayWeb/src/axlomoso/ezbay/struts/ressources/Application_fr.properties
+++ b/ezBayWeb/src/axlomoso/ezbay/struts/ressources/Application_fr.properties
@@ -61,6 +61,7 @@ inscription.erreur.pseudo.obligatoire=<li>Le champ Pseudo est obligatoire</li>
 inscription.erreur.password.obligatoire=<li>Le champ Mot de passe est obligatoire</li>
 inscription.erreur.password2.obligatoire=<li>Le champ Vérification Mot de passe est obligatoire</li>
 inscription.erreur.email.obligatoire=<li>Le champ E-mail est obligatoire</li>
+inscription.erreur.email.invalide=<li>Le champ E-mail est invalide</li>
 inscription.erreur.adresse.obligatoire=<li>Le champ Adresse est obligatoire</li>
 inscription.erreur.codePostal.obligatoire=<li>Le champ Code Postal est obligatoire</li>
 inscription.erreur.codePostal.badFormat=<li>Le champ Code Postal doit comporter maximum 5 chiffres</li>
