Ajout des paramètres pour - fiche article - fiche membre

--- a/ezBayWeb/src/axlomoso/ezbay/struts/ressources/Application_fr.properties
+++ b/ezBayWeb/src/axlomoso/ezbay/struts/ressources/Application_fr.properties
@@ -12,6 +12,7 @@ link.deconnexion=Se déconnecter
 link.vendeur.edit=Editer
 link.membre.edit=Editer
 link.modifier=Modifier
+link.fiche=Afficher la fiche
 
 # Label Boutons
 bouton.label.valider=Valider
@@ -144,6 +145,16 @@ articleEdit.erreurs.anneeFabricationNonValide=<li>L'année de fabrication n'est p
 articleEdit.erreurs.prixVenteNonValide=<li>Le prix de vente n'est pas valide.</li>
 articleEdit.erreurs.anneeFabricationNonValide=<li>L'anne de fabrication n'est pas valide.</li>
 
+# -- articleFiche.jsp --
+link.articleFiche=Afficher la fiche
+articleFiche.title=Fiche Article
+articleFiche.libelle=Libellé
+articleFiche.marque=Marque
+articleFiche.modele=Modèle
+articleFiche.prixVente=Prix de Vente
+articleFiche.anneeFabrication=Année de Fabrication
+articleFiche.dateLimite=Date Limite
+articleFiche.description=Description
 
 
 # -- articleAdd.jsp --
@@ -155,3 +166,9 @@ articleAdd.prixVente=Prix de Vente
 articleAdd.anneeFabrication=Année de Fabrication
 articleAdd.dateLimite=Date Limite
 articleAdd.title=Ajout d'un article		
+
+
+# -- membreFiche.jsp --
+link.membreFiche=Afficher la fiche du vendeur
+membreFiche.title=Fiche Membre
+membreFiche.pseudo=Pseudo
