axel : ajout de general.label.devise pour 

--- a/ezBayWeb/src/axlomoso/ezbay/struts/ressources/Application_fr.properties
+++ b/ezBayWeb/src/axlomoso/ezbay/struts/ressources/Application_fr.properties
@@ -4,6 +4,9 @@
 # Titre Resources
 titre.application=EzBay 
 
+# Labels generaux
+general.label.devise=?
+
 # Link Resources
 link.retour=Retour
 link.inscription=S'inscrire
