*** empty log message ***

--- a/ezBayWeb/src/axlomoso/ezbay/struts/ressources/Application_fr.properties
+++ b/ezBayWeb/src/axlomoso/ezbay/struts/ressources/Application_fr.properties
@@ -5,7 +5,7 @@
 titre.application=EzBay 
 
 # Labels generaux
-general.label.devise=?
+general.label.devise=&euro;
 
 # Link Resources
 link.retour=Retour
