*** empty log message ***

--- a/ezBayWeb/src/axlomoso/ezbay/struts/ressources/Application_fr.properties
+++ b/ezBayWeb/src/axlomoso/ezbay/struts/ressources/Application_fr.properties
@@ -99,7 +99,11 @@ vendeurArticles.titre=Vendeur : mes articles
 vendeurArticles.articlesEnAttente.titre=Articles en attente
 vendeurArticles.articlesEnVente.titre=Articles en vente
 vendeurArticles.articlesVendus.titre=Articles vendus
-articleEnAttente.noArticle=Aucun article trouvé.
+vendeurArticles.articleEnAttente.noArticle=Aucun article trouvé.
+vendeurArticles.articlesEnVente.noArticle=Aucun article trouvé.
+vendeurArticles.articlesVendus.noArticle=Aucun article trouvé.
+vendeurArticles.link.modifier=Modifier
+vendeurArticles.link.retirer=Retirer
 
 # --/jsp/membreInformations.jsp
 membre.titre.infos=Informations Membre
@@ -158,6 +162,7 @@ articleFiche.prixVente=Prix de Vente
 articleFiche.anneeFabrication=Année de Fabrication
 articleFiche.dateLimite=Date Limite
 articleFiche.description=Description
+articleFiche.categorie=Catégorie
 
 
 # -- articleAdd.jsp --
