Lotfi: Liste des catégories -création de la méthode getCategories dans la sessionfacade de catégorie - creation de la classe CategorieFacadeDelegate -l action et le form correspondant a la liste des catégories - la page jsp pour l affichage de la liste des catégories

--- a/ezBayWeb/src/axlomoso/ezbay/struts/ressources/Application_fr.properties
+++ b/ezBayWeb/src/axlomoso/ezbay/struts/ressources/Application_fr.properties
@@ -16,6 +16,7 @@ link.vendeur.edit=Editer
 link.membre.edit=Editer
 link.modifier=Modifier
 link.fiche=Afficher la fiche
+link.categories=Liste de Catégories
 
 # Label Boutons
 bouton.label.valider=Valider
@@ -180,3 +181,7 @@ articleAdd.title=Ajout d'un article
 link.membreFiche=Afficher la fiche du vendeur
 membreFiche.title=Fiche Membre
 membreFiche.pseudo=Pseudo
+
+# -- membreFiche.jsp --
+categorieList.title=Liste des Catégories
+categorieList.noCategories=Aucune Catégorie Existante
