--- a/ezBayWeb/src/axlomoso/ezbay/struts/ressources/Application_fr.properties
+++ b/ezBayWeb/src/axlomoso/ezbay/struts/ressources/Application_fr.properties
@@ -100,7 +100,7 @@ vendeurArticles.titre=Vendeur : mes articles
 vendeurArticles.articlesEnAttente.titre=Articles en attente
 vendeurArticles.articlesEnVente.titre=Articles en vente
 vendeurArticles.articlesVendus.titre=Articles vendus
-vendeurArticles.articleEnAttente.noArticle=Aucun article trouvé.
+vendeurArticles.articlesEnAttente.noArticle=Aucun article trouvé.
 vendeurArticles.articlesEnVente.noArticle=Aucun article trouvé.
 vendeurArticles.articlesVendus.noArticle=Aucun article trouvé.
 vendeurArticles.link.modifier=Modifier
