Axel : jout articleEdit.categorie

--- a/ezBayWeb/src/axlomoso/ezbay/struts/ressources/Application_fr.properties
+++ b/ezBayWeb/src/axlomoso/ezbay/struts/ressources/Application_fr.properties
@@ -135,6 +135,7 @@ articleList.noArticle=Aucun article trouvé.
 # -- articleEdit.jsp --
 articleEdit.title=Mise en vente d'un article
 articleEdit.libelle=Libellé
+articleEdit.categorie=Catégorie
 articleEdit.marque=Marque
 articleEdit.modele=Modèle
 articleEdit.prixVente=Prix de Vente
