lotfi: -recherche multicriteres non accompli

--- a/ezBayWeb/src/axlomoso/ezbay/struts/ressources/Application_fr.properties
+++ b/ezBayWeb/src/axlomoso/ezbay/struts/ressources/Application_fr.properties
@@ -17,11 +17,13 @@ link.membre.edit=Editer
 link.modifier=Modifier
 link.fiche=Afficher la fiche
 link.categories=Liste de Catégories
+link.Recherche.Article=Recherche Articles
 
 # Label Boutons
 bouton.label.valider=Valider
 bouton.label.annuler=Annuler
 bouton.label.retour=Retour
+boutton.recherche.article=Rechercher
 
 # Erreurs Resources
 erreurs.titre=Erreur !
