Sofi : - ajout des libellés pour les fiches Articles et Membres

--- a/ezBayWeb/src/axlomoso/ezbay/struts/ressources/Application_fr.properties
+++ b/ezBayWeb/src/axlomoso/ezbay/struts/ressources/Application_fr.properties
@@ -181,7 +181,9 @@ articleAdd.title=Ajout d'un article
 
 
 # -- membreFiche.jsp --
-link.membreFiche=Afficher la fiche du vendeur
+link.vendeurFiche=Afficher la fiche du vendeur
+link.clientFiche=Afficher la fiche de l'acheteur
+
 membreFiche.title=Fiche Membre
 membreFiche.pseudo=Pseudo
 
