--- a/ezBayWeb/src/axlomoso/ezbay/struts/ressources/Application_fr.properties
+++ b/ezBayWeb/src/axlomoso/ezbay/struts/ressources/Application_fr.properties
@@ -126,6 +126,7 @@ connect.errors.passwordVide=Password vide !
 
 # -- articleList.jsp --
 articleList.title=Liste des articles 2
+articleList.categorie.titre=Catégorie
 articleList.libelle=Libellé
 articleList.marque=Marque
 articleList.modele=Modèle
