Axel : 	Retrait d'articles

--- a/ezBayWeb/src/axlomoso/ezbay/struts/ressources/Application_fr.properties
+++ b/ezBayWeb/src/axlomoso/ezbay/struts/ressources/Application_fr.properties
@@ -18,6 +18,8 @@ link.modifier=Modifier
 link.fiche=Afficher la fiche
 link.categories=Liste de Catégories
 link.Recherche.Article=Recherche Articles
+link.valider=Valider
+link.annuler=Annuler
 
 # Label Boutons
 bouton.label.valider=Valider
@@ -156,6 +158,14 @@ articleEdit.erreurs.anneeFabricationVide=<li>L'année de fabrication est obligato
 articleEdit.erreurs.anneeFabricationNonValide=<li>L'année de fabrication n'est pas valide.</li>
 articleEdit.erreurs.prixVenteNonValide=<li>Le prix de vente n'est pas valide.</li>
 articleEdit.erreurs.anneeFabricationNonValide=<li>L'anne de fabrication n'est pas valide.</li>
+
+# -- articleRetrait.jsp --
+articleRetrait.titre=Retrait d'article
+articleRetrait.messageConfirm=Voulez-vous vraiment supprimer l'article
+articleRetrait.erreurs.articleEnVente=Vous ne pouvez pas supprimer l'article, il est encore en vente.
+articleRetrait.erreurs.articleVendu=Vous ne pouvez pas supprimer l'article, il est déjà vendu.
+articleRetrait.erreurs.nonProprietaire=Vous n'êtes pas le propriétaire de l'article.
+articleRetrait.erreurs.link.retour=Retour aux articles
 
 # -- articleFiche.jsp --
 link.articleFiche=Afficher la fiche
