Axel : ArticleEdit : Ajout de la desciption

--- a/ezBayWeb/src/axlomoso/ezbay/struts/ressources/Application_fr.properties
+++ b/ezBayWeb/src/axlomoso/ezbay/struts/ressources/Application_fr.properties
@@ -146,6 +146,7 @@ articleEdit.modele=Modèle
 articleEdit.prixVente=Prix de Vente
 articleEdit.anneeFabrication=Année de Fabrication
 articleEdit.dateLimite=Date Limite
+articleEdit.description=Description
 articleEdit.errors.articleNotSaved=L'article n'a pas été enregistré
 
 articleEdit.erreurs.libelleVide=<li>Le libellé est obligatoire.</li>
