--- a/ezBayWeb/src/axlomoso/ezbay/struts/ressources/Application_fr.properties
+++ b/ezBayWeb/src/axlomoso/ezbay/struts/ressources/Application_fr.properties
@@ -202,3 +202,7 @@ membreFiche.pseudo=Pseudo
 # -- membreFiche.jsp --
 categorieList.title=Liste des Catégories
 categorieList.noCategories=Aucune Catégorie Existante
+
+# -- rechercheArticle.jsp --
+rechercheArticle.prixVenteMin=Prix Minimum
+rechercheArticle.prixVenteMax=Prix Maximum
