Lotfi : ajout des libellés pour rechercheArticle

--- a/ezBayWeb/src/axlomoso/ezbay/struts/ressources/Application_fr.properties
+++ b/ezBayWeb/src/axlomoso/ezbay/struts/ressources/Application_fr.properties
@@ -206,3 +206,7 @@ categorieList.noCategories=Aucune Catégorie Existante
 # -- rechercheArticle.jsp --
 rechercheArticle.prixVenteMin=Prix Minimum
 rechercheArticle.prixVenteMax=Prix Maximum
+rechercheArticle.dateLimite=Date Limite (inférieur ou égale)
+rechercheArticle.anneeFabrication=Année de Fabrication (supérieure ou égale)
+rechercheArticle.nbArticles=Nombre d'article(s) trouvé(s) 
+rechercheArticle.noArticle=Aucun article trouvé
