Sofi : - ajout de propriétés

--- a/ezBayWeb/src/axlomoso/ezbay/struts/ressources/Application_fr.properties
+++ b/ezBayWeb/src/axlomoso/ezbay/struts/ressources/Application_fr.properties
@@ -20,6 +20,10 @@ link.categories=Liste de Catégories
 link.Recherche.Article=Recherche Articles
 link.valider=Valider
 link.annuler=Annuler
+link.monEzBay=MonEzBay
+link.articleFiche=Fiche article
+link.articleEncherir=Enchérir
+
 
 # Label Boutons
 bouton.label.valider=Valider
@@ -30,7 +34,7 @@ boutton.recherche.article=Rechercher
 # Erreurs Resources
 erreurs.titre=Erreur !
 errors.header=<font color="red"><b>Erreur(s)</b></font><ul>
-errors.footer=</ul><hr width="100%" size="1" noshade="true" />
+errors.footer=</ul><center><hr width="50%" size="1" noshade="true" /></center>
 
 # -- myEzBay.jsp --
 myEzBay.menu.sectionClient.titre=CLIENT
@@ -158,7 +162,7 @@ articleEdit.erreurs.prixVenteVide=<li>Le prix de vente est obligatoire.</li>
 articleEdit.erreurs.anneeFabricationVide=<li>L'année de fabrication est obligatoire.</li>
 articleEdit.erreurs.anneeFabricationNonValide=<li>L'année de fabrication n'est pas valide.</li>
 articleEdit.erreurs.prixVenteNonValide=<li>Le prix de vente n'est pas valide.</li>
-articleEdit.erreurs.anneeFabricationNonValide=<li>L'anne de fabrication n'est pas valide.</li>
+articleEdit.erreurs.anneeFabricationNonValide=<li>L'année de fabrication n'est pas valide.</li>
 
 # -- articleRetrait.jsp --
 articleRetrait.titre=Retrait d'article
