*** empty log message ***

--- a/ezBayWeb/src/axlomoso/ezbay/struts/ressources/Application_fr.properties
+++ b/ezBayWeb/src/axlomoso/ezbay/struts/ressources/Application_fr.properties
@@ -46,6 +46,7 @@ myEzBay.menu.sectionVendeur.link.infos=Informations Vendeur
 myEzBay.menu.sectionVendeur.link.inscription=S'inscrire comme vendeur
 myEzBay.menu.sectionClient.link.articles=Mes articles
 myEzBay.menu.sectionClient.link.miseEnVente=Mise en vente d'articles
+myEzBay.menu.sectionClient.link.ajoutArticle=Ajout d'article
 myEzBay.erreur.connexion=Mauvaise authentification
 
 
@@ -112,7 +113,8 @@ vendeurArticles.articlesEnAttente.noArticle=Aucun article trouvé.
 vendeurArticles.articlesEnVente.noArticle=Aucun article trouvé.
 vendeurArticles.articlesVendus.noArticle=Aucun article trouvé.
 vendeurArticles.link.modifier=Modifier
-vendeurArticles.link.retirer=Retirer
+vendeurArticles.link.retirer=Retirer de la vente
+vendeurArticles.link.supprimer=Supprimer
 
 # --/jsp/membreInformations.jsp
 membre.titre.infos=Informations Membre
@@ -142,7 +144,7 @@ articleList.dateLimite=Date Limite
 articleList.noArticle=Aucun article trouvé.
 
 # -- articleEdit.jsp --
-articleEdit.title=Mise en vente d'un article
+articleEdit.title=Ajout d'un article
 articleEdit.libelle=Libellé
 articleEdit.categorie=Catégorie
 articleEdit.marque=Marque
