*** empty log message ***

--- a/ezBayWeb/src/axlomoso/ezbay/struts/ressources/Application_fr.properties
+++ b/ezBayWeb/src/axlomoso/ezbay/struts/ressources/Application_fr.properties
@@ -113,8 +113,7 @@ vendeurArticles.articlesEnAttente.noArticle=Aucun article trouvé.
 vendeurArticles.articlesEnVente.noArticle=Aucun article trouvé.
 vendeurArticles.articlesVendus.noArticle=Aucun article trouvé.
 vendeurArticles.link.modifier=Modifier
-vendeurArticles.link.retirer=Retirer de la vente
-vendeurArticles.link.supprimer=Supprimer
+vendeurArticles.link.retirer=Retirer
 
 # --/jsp/membreInformations.jsp
 membre.titre.infos=Informations Membre
