--- a/ezBayWeb/src/axlomoso/ezbay/struts/ressources/Application_fr.properties
+++ b/ezBayWeb/src/axlomoso/ezbay/struts/ressources/Application_fr.properties
@@ -113,7 +113,8 @@ vendeurArticles.articlesEnAttente.noArticle=Aucun article trouvé.
 vendeurArticles.articlesEnVente.noArticle=Aucun article trouvé.
 vendeurArticles.articlesVendus.noArticle=Aucun article trouvé.
 vendeurArticles.link.modifier=Modifier
-vendeurArticles.link.retirer=Retirer
+vendeurArticles.link.retirer=Retirer de la vente
+vendeurArticles.link.supprimer=Supprimer
 
 # --/jsp/membreInformations.jsp
 membre.titre.infos=Informations Membre
@@ -215,3 +216,6 @@ rechercheArticle.dateLimite=Date Limite (inférieur ou égale)
 rechercheArticle.anneeFabrication=Année de Fabrication (supérieure ou égale)
 rechercheArticle.nbArticles=Nombre d'article(s) trouvé(s) 
 rechercheArticle.noArticle=Aucun article trouvé
+
+# -- footer.jsp --
+footer.title=<font color="#023264" size="-1"><em>        			 Copyright &copy; 2006, Axloso Krupp       </em><br><em>                   Exemple présenté dans le cadre d'un projet                        </em><br><em>                       supervisé par M. Zam et M. Menceur                             </em></font>
