--- a/ezBayWeb/src/axlomoso/ezbay/struts/ressources/Application_fr.properties
+++ b/ezBayWeb/src/axlomoso/ezbay/struts/ressources/Application_fr.properties
@@ -114,6 +114,7 @@ vendeurArticles.articlesEnVente.noArticle=Aucun article trouvé.
 vendeurArticles.articlesVendus.noArticle=Aucun article trouvé.
 vendeurArticles.link.modifier=Modifier
 vendeurArticles.link.retirer=Retirer de la vente
+vendeurArticles.link.mettreEnVente=Mettre en vente
 vendeurArticles.link.supprimer=Supprimer
 
 # --/jsp/membreInformations.jsp
