AXEL : 	poser une enchère

--- a/ezBayWeb/src/axlomoso/ezbay/struts/ressources/Application_fr.properties
+++ b/ezBayWeb/src/axlomoso/ezbay/struts/ressources/Application_fr.properties
@@ -218,5 +218,18 @@ rechercheArticle.anneeFabrication=Année de Fabrication (supérieure ou égale)
 rechercheArticle.nbArticles=Nombre d'article(s) trouvé(s) 
 rechercheArticle.noArticle=Aucun article trouvé
 
+# -- enchereEdit.jsp -- 
+articleEnchereEdit.titre=Encherir
+articleEnchereEdit.libelleArticle=Article
+articleEnchereEdit.derniereEnchere=Montant dernière enchère
+articleEnchereEdit.prixDepart=Prix de départ
+articleEnchereEdit.montant=Votre enchère
+articleEnchereEdit.erreurs.montantVide=Vous devez indiquer un montant pour l'enchère.
+articleEnchereEdit.erreurs.montantInvalide=Montant de l'enchère invalide.
+articleEnchereEdit.erreurs.montantInferieurADerniereEnchere=Vous devez indiquer un montant > à la dernière enchère
+articleEnchereEdit.erreurs.montantInferieurAPrixDepart=Vous devez indiquer un montant > au prix de départ
+
+
+
 # -- footer.jsp --
 footer.title=<font color="#023264" size="-1"><em>        			 Copyright &copy; 2006, Axloso Krupp       </em><br><em>                   Exemple présenté dans le cadre d'un projet                        </em><br><em>                       supervisé par M. Zam et M. Menceur                             </em></font>
