*** empty log message ***

--- a/ezBayWeb/src/axlomoso/ezbay/struts/ressources/Application_fr.properties
+++ b/ezBayWeb/src/axlomoso/ezbay/struts/ressources/Application_fr.properties
@@ -228,7 +228,7 @@ articleEnchereEdit.erreurs.montantVide=Vous devez indiquer un montant pour l'enc
 articleEnchereEdit.erreurs.montantInvalide=Montant de l'enchère invalide.
 articleEnchereEdit.erreurs.montantInferieurADerniereEnchere=Vous devez indiquer un montant > à la dernière enchère
 articleEnchereEdit.erreurs.montantInferieurAPrixDepart=Vous devez indiquer un montant > au prix de départ
-
+articleEnchereEdit.erreurs.membreNonConnecte=Vous devez vous connecter pour poser des enchères.
 
 
 # -- footer.jsp --
