--- a/ezBayWeb/src/axlomoso/ezbay/struts/ressources/Application_fr.properties
+++ b/ezBayWeb/src/axlomoso/ezbay/struts/ressources/Application_fr.properties
@@ -171,6 +171,7 @@ articleEdit.erreurs.anneeFabricationNonValide=<li>L'année de fabrication n'est p
 articleRetrait.titre=Retrait d'article
 articleRetrait.messageConfirm=Voulez-vous vraiment supprimer l'article
 articleRetrait.erreurs.articleEnVente=Vous ne pouvez pas supprimer l'article, il est encore en vente.
+articleRetrait.erreurs.articleEnEnchere=Vous ne pouvez pas supprimer l'article, il y a des enchères dessus.
 articleRetrait.erreurs.articleVendu=Vous ne pouvez pas supprimer l'article, il est déjà vendu.
 articleRetrait.erreurs.nonProprietaire=Vous n'êtes pas le propriétaire de l'article.
 articleRetrait.erreurs.link.retour=Retour aux articles
