AXEL : 	Enchères OK

--- a/ezBayWeb/src/axlomoso/ezbay/struts/ressources/Application_fr.properties
+++ b/ezBayWeb/src/axlomoso/ezbay/struts/ressources/Application_fr.properties
@@ -182,11 +182,17 @@ articleFiche.title=Fiche Article
 articleFiche.libelle=Libellé
 articleFiche.marque=Marque
 articleFiche.modele=Modèle
-articleFiche.prixVente=Prix de Vente
+articleFiche.prixVente=Prix initial
 articleFiche.anneeFabrication=Année de Fabrication
 articleFiche.dateLimite=Date Limite
 articleFiche.description=Description
 articleFiche.categorie=Catégorie
+articleFiche.derniereEnchere.titre=Dernère enchère
+articleFiche.derniereEnchere.encherisseur=Enchérisseur
+articleFiche.derniereEnchere.montant=Montant
+articleFiche.derniereEnchere.date=Date
+articleFiche.noEnchere=Auncune enchère
+
 
 
 # -- articleAdd.jsp --
