AXEL : ArticleView possède les infos concernant les enchères et la transaction éventuelle...

--- a/ezBayWeb/src/axlomoso/ezbay/struts/ressources/Application_fr.properties
+++ b/ezBayWeb/src/axlomoso/ezbay/struts/ressources/Application_fr.properties
@@ -50,8 +50,6 @@ myEzBay.menu.sectionClient.link.ajoutArticle=Ajout d'article
 myEzBay.erreur.connexion=Mauvaise authentification
 
 
-
-
 # -- inscription.jsp --
 inscription.label=Ajout d'un membre
 inscription.label.id=Identifiant 
@@ -140,7 +138,16 @@ articleList.libelle=Libellé
 articleList.marque=Marque
 articleList.modele=Modèle
 articleList.prixVente=Prix de Vente
-articleList.anneeFabrication=Année de Fabrication
+articleList.prixDepart=Prix de Départ
+articleList.prixActuel=Prix Actuel
+articleList.prix=Prix
+articleList.nbEncheres=Nb enchères
+articleList.derniereEnchere.titre=Dernière enchère
+articleList.derniereEnchere.date=Le
+articleList.derniereEnchere.encherriseur.nom=Dernier enchérisseur
+articleList.transaction.titre=Transaction
+articleList.transaction.client.nom=Acquéreur
+articleList.anneeFabrication=Année
 articleList.dateLimite=Date Limite
 articleList.noArticle=Aucun article trouvé.
 
@@ -236,6 +243,7 @@ articleEnchereEdit.erreurs.montantInvalide=Montant de l'enchère invalide.
 articleEnchereEdit.erreurs.montantInferieurADerniereEnchere=Vous devez indiquer un montant > à la dernière enchère
 articleEnchereEdit.erreurs.montantInferieurAPrixDepart=Vous devez indiquer un montant > au prix de départ
 articleEnchereEdit.erreurs.membreNonConnecte=Vous devez vous connecter pour poser des enchères.
+articleEnchereEdit.erreurs.articleNonEnVente=Malheureusement l'article n'est plus disponible à la vente. <br /> Votre enchère n'a pas été prise en compte. 
 articleEnchereEdit.link.articleFiche=Retour à l'article
 
 
