AXEL : 	ArticleView contient tout un tas de bonnes choses...

--- a/ezBayWeb/src/axlomoso/ezbay/struts/ressources/Application_fr.properties
+++ b/ezBayWeb/src/axlomoso/ezbay/struts/ressources/Application_fr.properties
@@ -185,6 +185,7 @@ articleRetrait.erreurs.link.retour=Retour aux articles
 
 # -- articleFiche.jsp --
 link.articleFiche=Afficher la fiche
+articleFiche.vendeur.fiche=Vendeur
 articleFiche.title=Fiche Article
 articleFiche.libelle=Libellé
 articleFiche.marque=Marque
@@ -194,6 +195,8 @@ articleFiche.anneeFabrication=Année de Fabrication
 articleFiche.dateLimite=Date Limite
 articleFiche.description=Description
 articleFiche.categorie=Catégorie
+articleFiche.encheres.historique=Historiques
+articleFiche.encheres.libelle=Enchère(s)
 articleFiche.derniereEnchere.titre=Dernère enchère
 articleFiche.derniereEnchere.encherisseur=Enchérisseur
 articleFiche.derniereEnchere.montant=Montant
