*** empty log message ***

--- a/ezBayWeb/src/axlomoso/ezbay/struts/ressources/Application_fr.properties
+++ b/ezBayWeb/src/axlomoso/ezbay/struts/ressources/Application_fr.properties
@@ -6,6 +6,7 @@ titre.application=EzBay
 
 # Labels generaux
 general.label.devise=&euro;
+general.label.jour=jour(s)
 
 # Link Resources
 link.retour=Retour
@@ -159,6 +160,7 @@ articleEdit.marque=Marque
 articleEdit.modele=Modèle
 articleEdit.prixVente=Prix de Vente
 articleEdit.anneeFabrication=Année de Fabrication
+articleEdit.nbJoursValidite=Validite
 articleEdit.dateLimite=Date Limite
 articleEdit.description=Description
 articleEdit.errors.articleNotSaved=L'article n'a pas été enregistré
