--- a/ezBayWeb/src/axlomoso/ezbay/struts/ressources/Application_fr.properties
+++ b/ezBayWeb/src/axlomoso/ezbay/struts/ressources/Application_fr.properties
@@ -37,6 +37,11 @@ erreurs.titre=Erreur !
 errors.header=<font color="red"><b>Erreur(s)</b></font><ul>
 errors.footer=</ul><center><hr width="50%" size="1" noshade="true" /></center>
 
+
+# -- header.jsp --
+header.title=Bienvenue
+
+
 # -- myEzBay.jsp --
 myEzBay.menu.sectionClient.titre=CLIENT
 myEzBay.menu.sectionClient.link.infos=Informations Personnelles
