--- a/ezBayWeb/src/axlomoso/ezbay/struts/ressources/Application_fr.properties
+++ b/ezBayWeb/src/axlomoso/ezbay/struts/ressources/Application_fr.properties
@@ -98,7 +98,7 @@ vendeur.titre.infos=Informations Vendeur
 vendeur.titre.infosCB=Information carte bleue
 vendeur.label.numCB=Numéro
 vendeur.label.nomProprioCB=Nom du propriétaire
-vendeur.label.dateExpirCB=Date d'expiration
+vendeur.label.dateExpirCB=Date d'expiration(jj/mm/aaa)
 vendeur.label.codeSecuCB=Code sécurité
 vendeur.inscription.erreur.dateExpirCB.badFormat=<li>La date d'expiration de la CB doit être de la forme jj/mm/aaaa</li>
 vendeur.inscription.erreur.dateExpirCB.obligatoire=<li>Le champ Date d'expiration de la CB est obligatoire</li>
@@ -154,7 +154,7 @@ articleList.derniereEnchere.encherriseur.nom=Dernier enchérisseur
 articleList.transaction.titre=Transaction
 articleList.transaction.client.nom=Acquéreur
 articleList.anneeFabrication=Année
-articleList.dateLimite=Date Limite
+articleList.dateLimite=Date Limite(jj/mm/aaaa - hh:mm:ss)
 articleList.noArticle=Aucun article trouvé.
 
 # -- articleEdit.jsp --
@@ -166,14 +166,14 @@ articleEdit.modele=Modèle
 articleEdit.prixVente=Prix de Vente
 articleEdit.anneeFabrication=Année de Fabrication
 articleEdit.nbJoursValidite=Validite
-articleEdit.dateLimite=Date Limite
+articleEdit.dateLimite=Date Limite(jj/mm/aaaa - hh:mm:ss)
 articleEdit.description=Description
 articleEdit.errors.articleNotSaved=L'article n'a pas été enregistré
 
 articleEdit.erreurs.libelleVide=<li>Le libellé est obligatoire.</li>
 articleEdit.erreurs.marqueVide=<li>La marque est obligatoire.</li>
 articleEdit.erreurs.dateLimiteVide=<li>La date limite est obligatoire.</li>
-articleEdit.erreurs.dateLimiteNonValide=<li>La date limite n'est pas valide.</li>
+articleEdit.erreurs.dateLimiteNonValide=<li>La date limite n'est pas valide. (jj/mm/aaaa - hh:mm:ss)</li>
 articleEdit.erreurs.modeleVide=<li>Le modèle est obligatoire.</li>
 articleEdit.erreurs.prixVenteVide=<li>Le prix de vente est obligatoire.</li>
 articleEdit.erreurs.anneeFabricationVide=<li>L'année de fabrication est obligatoire.</li>
@@ -219,7 +219,7 @@ articleAdd.marque=Marque
 articleAdd.modele=Modèle
 articleAdd.prixVente=Prix de Vente
 articleAdd.anneeFabrication=Année de Fabrication
-articleAdd.dateLimite=Date Limite
+articleAdd.dateLimite=Date Limite(jj/mm/aaaa - hh:mm:ss)
 articleAdd.title=Ajout d'un article		
 
 
