--- a/ezBayWeb/src/axlomoso/ezbay/struts/ressources/Application_fr.properties
+++ b/ezBayWeb/src/axlomoso/ezbay/struts/ressources/Application_fr.properties
@@ -117,7 +117,7 @@ vendeurArticles.articlesEnAttente.noArticle=Aucun article trouvé.
 vendeurArticles.articlesEnVente.noArticle=Aucun article trouvé.
 vendeurArticles.articlesVendus.noArticle=Aucun article trouvé.
 vendeurArticles.link.modifier=Modifier
-vendeurArticles.link.retirer=Retirer de la vente
+vendeurArticles.link.retirer=Retirer
 vendeurArticles.link.mettreEnVente=Mettre en vente
 vendeurArticles.link.supprimer=Supprimer
 
