*** empty log message ***

--- a/ezBayWeb/src/axlomoso/ezbay/struts/ressources/Application_fr.properties
+++ b/ezBayWeb/src/axlomoso/ezbay/struts/ressources/Application_fr.properties
@@ -155,6 +155,7 @@ articleList.transaction.titre=Transaction
 articleList.transaction.client.nom=Acquéreur
 articleList.anneeFabrication=Année
 articleList.dateLimite=Date Limite(jj/mm/aaaa - hh:mm:ss)
+articleList.dateLimiteSimple=Date Limite
 articleList.noArticle=Aucun article trouvé.
 
 # -- articleEdit.jsp --
