AXEL & LOTFI : 	Client : 	Rubriques 		mes enchères 		mes achats

--- a/ezBayWeb/src/axlomoso/ezbay/struts/ressources/Application_fr.properties
+++ b/ezBayWeb/src/axlomoso/ezbay/struts/ressources/Application_fr.properties
@@ -121,6 +121,21 @@ vendeurArticles.link.retirer=Retirer
 vendeurArticles.link.mettreEnVente=Mettre en vente
 vendeurArticles.link.supprimer=Supprimer
 
+# --/jsp/clientAchats.jsp
+clientAchats.titre=Client : mes articles achetés
+clientAchats.noArticle=Aucun article trouvé.
+clientAchats.article.date=Date
+clientAchats.vendeur=Vendeur
+
+# --/jsp/clientEncheres.jsp
+clientEncheres.titre=Client : mes encheres
+clientEncheres.noArticle=Aucun article trouvé.
+clientEncheres.article.date=Date
+clientEncheres.vendeur=Vendeur
+
+
+
+
 # --/jsp/membreInformations.jsp
 membre.titre.infos=Informations Membre
 
