*** empty log message ***

--- a/ezBayWeb/src/axlomoso/ezbay/struts/ressources/Application_fr.properties
+++ b/ezBayWeb/src/axlomoso/ezbay/struts/ressources/Application_fr.properties
@@ -126,6 +126,8 @@ clientAchats.titre=Client : mes articles achetés
 clientAchats.noArticle=Aucun article trouvé.
 clientAchats.article.date=Date
 clientAchats.vendeur=Vendeur
+clientAchats.deposerAvis.link=Déposer un avis
+clientAchats.avis.titre=Déposer un avis
 
 # --/jsp/clientEncheres.jsp
 clientEncheres.titre=Client : mes encheres
