axel & lotfi : 	déposer des avis

--- a/ezBayWeb/src/axlomoso/ezbay/struts/ressources/Application_fr.properties
+++ b/ezBayWeb/src/axlomoso/ezbay/struts/ressources/Application_fr.properties
@@ -127,7 +127,12 @@ clientAchats.noArticle=Aucun article trouvé.
 clientAchats.article.date=Date
 clientAchats.vendeur=Vendeur
 clientAchats.deposerAvis.link=Déposer un avis
-clientAchats.avis.titre=Déposer un avis
+clientAchats.avis.titre=Avis
+clientAchats.avis.titre.tresBien=Très Bien
+clientAchats.avis.titre.bien=Bien
+clientAchats.avis.titre.passable=Passable
+clientAchats.avis.titre.mauvais=Mauvais
+					
 
 # --/jsp/clientEncheres.jsp
 clientEncheres.titre=Client : mes encheres
