*** empty log message ***

--- a/ezBayWeb/src/axlomoso/ezbay/struts/ressources/Application_fr.properties
+++ b/ezBayWeb/src/axlomoso/ezbay/struts/ressources/Application_fr.properties
@@ -126,7 +126,7 @@ clientAchats.titre=Client : mes articles achetés
 clientAchats.noArticle=Aucun article trouvé.
 clientAchats.article.date=Date
 clientAchats.vendeur=Vendeur
-clientAchats.deposerAvis.link=Déposer un avis
+clientAchats.deposerAvis.link=Déposer l'avis
 clientAchats.avis.titre=Avis
 clientAchats.avis.titre.tresBien=Très Bien
 clientAchats.avis.titre.bien=Bien
