--- a/ezBayWeb/src/axlomoso/ezbay/struts/ressources/Application_fr.properties
+++ b/ezBayWeb/src/axlomoso/ezbay/struts/ressources/Application_fr.properties
@@ -98,7 +98,7 @@ vendeur.titre.infos=Informations Vendeur
 vendeur.titre.infosCB=Information carte bleue
 vendeur.label.numCB=Numéro
 vendeur.label.nomProprioCB=Nom du propriétaire
-vendeur.label.dateExpirCB=Date d'expiration(jj/mm/aaa)
+vendeur.label.dateExpirCB=Date d'expiration (jj/mm/aaa)
 vendeur.label.codeSecuCB=Code sécurité
 vendeur.inscription.erreur.dateExpirCB.badFormat=<li>La date d'expiration de la CB doit être de la forme jj/mm/aaaa</li>
 vendeur.inscription.erreur.dateExpirCB.obligatoire=<li>Le champ Date d'expiration de la CB est obligatoire</li>
@@ -171,7 +171,7 @@ articleList.prixActuel=Prix Actuel
 articleList.prix=Prix
 articleList.nbEncheres=Nb enchères
 articleList.derniereEnchere.titre=Dernière enchère
-articleList.derniereEnchere.date=Le
+articleList.derniereEnchere.date=Date de l'enchère
 articleList.derniereEnchere.encherriseur.nom=Dernier enchérisseur
 articleList.transaction.titre=Transaction
 articleList.transaction.client.nom=Acquéreur
@@ -232,7 +232,7 @@ articleFiche.derniereEnchere.encherisseur=Enchérisseur
 articleFiche.derniereEnchere.montant=Montant
 articleFiche.derniereEnchere.date=Date
 articleFiche.noEnchere=Auncune enchère
-
+articleFiche.dateDerniereEnchere=Date de la dernière enchère
 
 
 # -- articleAdd.jsp --
@@ -258,6 +258,7 @@ categorieList.title=Liste des Catégories
 categorieList.noCategories=Aucune Catégorie Existante
 
 # -- rechercheArticle.jsp --
+rechercheArticle.title=Recherche d'article(s)
 rechercheArticle.prixVenteMin=Prix Minimum
 rechercheArticle.prixVenteMax=Prix Maximum
 rechercheArticle.dateLimite=Date Limite (inférieur ou égale)
@@ -281,4 +282,4 @@ articleEnchereEdit.link.articleFiche=Retour à l'article
 
 
 # -- footer.jsp --
-footer.title=<font color="#023264" size="-1"><em>        			 Copyright &copy; 2006, Axloso Krupp       </em><br><em>                   Exemple présenté dans le cadre d'un projet                        </em><br><em>                       supervisé par M. Zam et M. Menceur                             </em></font>
+footer.title=<font color="#023264" size="-3"><em>        			 Copyright &copy; 2006, Axloso Krupp       </em><br><em>                   Exemple présenté dans le cadre d'un projet                        </em><br><em>                       supervisé par M. Zam et M. Menceur                             </em></font>
