--- a/ezBayWeb/src/axlomoso/ezbay/struts/ressources/Application_fr.properties
+++ b/ezBayWeb/src/axlomoso/ezbay/struts/ressources/Application_fr.properties
@@ -34,8 +34,8 @@ boutton.recherche.article=Rechercher
 
 # Erreurs Resources
 erreurs.titre=Erreur !
-errors.header=<font color="red"><b>Erreur(s)</b></font><ul>
-errors.footer=</ul><center><hr width="50%" size="1" noshade="true" /></center>
+errors.header=<font color="red"><b>Erreur(s)</b></font><br /><br />
+errors.footer=<br /><br /><center><hr width="25%" color="red" size="1" /></center>
 
 
 # -- header.jsp --
@@ -135,7 +135,7 @@ clientAchats.avis.titre.mauvais=Mauvais
 					
 
 # --/jsp/clientEncheres.jsp
-clientEncheres.titre=Client : mes encheres
+clientEncheres.titre=Client : mes enchères
 clientEncheres.noArticle=Aucun article trouvé.
 clientEncheres.article.date=Date
 clientEncheres.vendeur=Vendeur
@@ -267,7 +267,7 @@ rechercheArticle.nbArticles=Nombre d'article(s) trouvé(s)
 rechercheArticle.noArticle=Aucun article trouvé
 
 # -- enchereEdit.jsp -- 
-articleEnchereEdit.titre=Encherir
+articleEnchereEdit.titre=Enchérir
 articleEnchereEdit.libelleArticle=Article
 articleEnchereEdit.derniereEnchere=Montant dernière enchère
 articleEnchereEdit.prixDepart=Prix de départ
