*** empty log message ***

--- a/ezBayWeb/src/axlomoso/ezbay/struts/ressources/Application_fr.properties
+++ b/ezBayWeb/src/axlomoso/ezbay/struts/ressources/Application_fr.properties
@@ -116,6 +116,7 @@ vendeurArticles.articlesVendus.titre=Articles vendus
 vendeurArticles.articlesEnAttente.noArticle=Aucun article trouvé.
 vendeurArticles.articlesEnVente.noArticle=Aucun article trouvé.
 vendeurArticles.articlesVendus.noArticle=Aucun article trouvé.
+vendeurArticles.articlesVendus.vente.titre=Informations vente
 vendeurArticles.link.modifier=Modifier
 vendeurArticles.link.retirer=Retirer
 vendeurArticles.link.mettreEnVente=Mettre en vente
@@ -126,7 +127,7 @@ clientAchats.titre=Client : mes articles achetés
 clientAchats.noArticle=Aucun article trouvé.
 clientAchats.article.date=Date
 clientAchats.vendeur=Vendeur
-clientAchats.deposerAvis.link=Déposer l'avis
+clientAchats.deposerAvis.link=Déposer un avis
 clientAchats.avis.titre=Avis
 clientAchats.avis.titre.tresBien=Très Bien
 clientAchats.avis.titre.bien=Bien
