*** empty log message ***

--- a/ezBayWeb/src/axlomoso/ezbay/struts/ressources/Application_fr.properties
+++ b/ezBayWeb/src/axlomoso/ezbay/struts/ressources/Application_fr.properties
@@ -133,6 +133,13 @@ clientAchats.avis.titre.tresBien=Très Bien
 clientAchats.avis.titre.bien=Bien
 clientAchats.avis.titre.passable=Passable
 clientAchats.avis.titre.mauvais=Mauvais
+
+# --/jsp/avisEdit.jsp
+avisEdit.titre=Déposer un avis
+avisEdit.vendeur=Vendeur
+avisEdit.article=Article
+avisEdit.date=Article
+avisEdit.montant=Montant
 					
 
 # --/jsp/clientEncheres.jsp
