*** empty log message ***

--- a/ezBayWeb/src/axlomoso/ezbay/struts/ressources/Application_fr.properties
+++ b/ezBayWeb/src/axlomoso/ezbay/struts/ressources/Application_fr.properties
@@ -140,6 +140,7 @@ avisEdit.vendeur=Vendeur
 avisEdit.article=Article
 avisEdit.date=Article
 avisEdit.montant=Montant
+avisEdit.votreAvis=Votre avis
 					
 
 # --/jsp/clientEncheres.jsp
