*** empty log message ***

--- a/ezBayWeb/src/axlomoso/ezbay/struts/ressources/Application_fr.properties
+++ b/ezBayWeb/src/axlomoso/ezbay/struts/ressources/Application_fr.properties
@@ -138,7 +138,7 @@ clientAchats.avis.titre.mauvais=Mauvais
 avisEdit.titre=Déposer un avis
 avisEdit.vendeur=Vendeur
 avisEdit.article=Article
-avisEdit.date=Article
+avisEdit.date=Date
 avisEdit.montant=Montant
 avisEdit.votreAvis=Votre avis
 					
